--- a/styles/css/home/vtex.rich-text.css
+++ b/styles/css/home/vtex.rich-text.css
@@ -17,3 +17,7 @@
 .paragraph--home__qualities--items-paragraph{
   margin: 0px;
 }
+
+.paragraph--home__text--title-section{
+  background-color: red;
+}
